
For a complete change history, please see the CVS log comments.


CHANGES - Current Version:
--------------------------

Version 1.6.3-beta2 (2007-09-18)
--------------------------------

- Fixed another issue related to splitting of object blocks with the 
  optimized spatial index. The compressed coordinate origin values were
  not initialized properly before being written (bug 1732)


Version 1.6.3-beta1 (2007-09-14)
--------------------------------

- Fixed the splitting of object blocks with the optimized spatial
  index mode that was producing files with misaligned bytes that
  confused MapInfo (bug 1732)
  Note that even if this bug is (hopefully) fixed, the optimized spatial
  index is still disabled by default in this release and we still use
  the quick (i.e. traditional) spatial index mode by default.

- Fixed problem with MIF parser being confused by special attribute 
  names (bug 1795)


Version 1.6.2 (2007-07-12)
--------------------------

***   ***   ***   ***   ***
- IMPORTANT: The optimized spatial index introduced in V1.6.0 has been 
  disabled by default in this release after we found that the current block
  splitting technique often produces files that confuse MapInfo (bug 1732).
  The Quick Spatial Index Mode is used by default until bug 1732 is fixed.
***   ***   ***   ***   ***

- Fixed error reading compressed text objects introduced in v1.6.0 (bug 1722)

- Fixed memory leaks when reading multipoint objects from .MIF files

- Added IMapInfoFile::SetCharset() method (bug 1734)

- Added TABFile::TwoPointLineAsPolyline() to allow writing two point lines
  as polylines (bug 1735)

- Added missing cast in isspace() calls to avoid failed assertion on Windows
  (MITAB bug 1737, GDAL ticket 1678))

- Fixed memory leak when writing .TAB with new (optimized) spatial index
  introduced in v1.6.0 (bug 1725)

- Fixed another issue related to attempting to read past EOF while writing
  collections (bug 1657)
